<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">AsteroidOS Sync</string>
    <string name="generic_ok">OK</string>
    <string name="searching">Searching for watches</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="nothing_found">No watches found</string>
    <string name="one_found">Found one watch</string>
    <string name="n_found">Found %d watches</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting…</string>
    <string name="connected_formatted">Connected to %s</string>
    <string name="connecting_formatted">Connecting to %s</string>
    <string name="connected_icon">Connected icon</string>
    <string name="battery_info_icon">Battery info icon</string>
    <string name="screenshot_icon">Screenshot icon</string>
    <string name="finder_icon">Finder icon</string>
    <string name="settings_icon">Settings icon</string>
    <string name="weather_icon">Weather icon</string>
    <string name="time_icon">Time icon</string>
    <string name="grab_a_screenshot">Grab a screenshot</string>
    <string name="find_my_watch">Find my watch</string>
    <string name="watch_finder">Watch finder</string>
    <string name="phone_is_searching">The phone is searching for you!</string>
    <string name="notifications_settings">Notifications settings</string>
    <string name="weather_settings">Weather settings</string>
    <string name="enter_city_name">Enter a city name:</string>
    <string name="unpair">Unpair</string>
    <string name="scanning">Scanning…</string>
    <string name="downloading">Downloading…</string>
    <string name="downloaded">Downloaded</string>
    <string name="screenshot">Screenshot</string>
    <string name="synchronize_time">Synchronize time</string>
    <string name="synchronize_weather">Locate weather automatically</string>
    <string name="notification_type_default">Default</string>
    <string name="notification_type_no_notif">No notification</string>
    <string name="notification_type_silent">Silent</string>
    <string name="notification_type_vibra">Vibrations</string>
    <string name="notification_type_strong_vibra">Strong vibration</string>
    <string name="explain_app_prefs">Notifications from your apps will appear here</string>
    <string name="position_indicator">Position Indicator</string>
    <string name="use_this_area">Use this area for weather</string>
    <string name="app_icon">Application icon</string>
    <string name="intro_slide1_title">Welcome</string>
    <string name="intro_slide1_subtitle">This app lets you sync your Android phone with your AsteroidOS watch. But first, it needs some permissions.</string>
    <string name="intro_slide2_title">File access</string>
    <string name="intro_slide2_subtitle">To cache data and save screenshots of your watch.</string>
    <string name="intro_slide3_title">Location &amp; Bluetooth</string>
    <string name="intro_slide3_subtitle">To scan and connect to nearby Bluetooth Low Energy devices.</string>
    <string name="intro_slide4_title">Notifications</string>
    <string name="intro_slide4_subtitle">To sync notifications with your watch, allow \"AsteroidOS Sync\" in the following menu:</string>
    <string name="intro_slide5_title">Battery Optimization</string>
    <string name="intro_slide5_subtitle">To let this app run in the background, please disable \"Battery Optimization\" for AsteroidOS Sync in the following menu:</string>
    <string name="intro_slideerror_title">Bluetooth Low Energy support</string>
    <string name="intro_slideerror_subtitle">This device does not support Bluetooth Low Energy.</string>
    <string name="intro_slideandroidgo_title">Android Go</string>
    <string name="intro_slideandroidgo_subtitle">Android Go is unsupported because it does not allow notification access and restricts background processes. A workaround for root users is to set the \"ro.config.low_ram\" flag in the build.prop file to \"false\".</string>
    <string name="grant_permission">Grant permission</string>
    <string name="please_grant_permissions">Please grant this permission</string>
    <string name="impassable_slide">Please grant this permission</string>
    <string name="title_activity_settings_activity">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="switch_phone_notifications">Silence the phone when connected</string>
    <string name="notification_silent_icon">Notification Silent Icon</string>
    <string name="notification_type_ringtone">Ringtone</string>
    <string name="intro_phonestateslide_subtitle">To show incoming calls on the watch, and for displaying the name of the caller.</string>
    <string name="intro_phonestateslide_title">Phone &amp; Contacts</string>
    <string name="show_calls_on_watch">Display incoming calls</string>
    <string name="dialer">Dialer</string>
    <string name="set_owm_api_key">Set custom OWM API Key</string>
    <string name="OWM_API_KEY">OWM API Key</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="location_disabled_message">In order to find watches the location service has to be enabled. Once paired you can safely disable it again.</string>
    <string name="location_disabled_title">Location disabled</string>
    <string name="intro_slide6_title">Phone Notifications</string>
    <string name="intro_slide6_subtitle">To show the current connection state of the watch.</string>
</resources>