<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="org.asteroidos.sync.fragments.DeviceDetailFragment"
    tools:ignore="MergeRootFrame">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO fix ScrollViewSize -->
        <LinearLayout
            android:id="@+id/device_connected_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/detail_horizontal_margin"
            android:paddingTop="@dimen/detail_top_margin"
            android:paddingRight="@dimen/detail_horizontal_margin"
            android:paddingBottom="@dimen/detail_bottom_margin"
            android:visibility="invisible"
            tools:ignore="ScrollViewSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/connected_icon"
                    android:gravity="start"
                    android:src="@drawable/cloud_done"
                    app:tint="?attr/colorControlNormal" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/connected"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/battery_info_icon"
                    android:gravity="end"
                    android:src="@drawable/battery_full"
                    app:tint="?attr/colorControlNormal" />

                <TextView
                    android:id="@+id/info_battery"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/hundred_percent"
                    android:textSize="15sp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view1"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/info_icon1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="16dp"
                        android:contentDescription="@string/weather_icon"
                        android:src="@drawable/weather"
                        card_view:tint="?attr/colorControlNormal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/info_icon1"
                        android:text="@string/weather_settings"
                        android:textSize="16sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/info_icon2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="16dp"
                        android:contentDescription="@string/finder_icon"
                        android:src="@drawable/notifications"
                        card_view:tint="?attr/colorControlNormal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/info_icon2"
                        android:text="@string/find_my_watch"
                        android:textSize="16sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view3"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/info_icon3"
                    android:text="@string/grab_a_screenshot"
                    android:textSize="16sp" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view4"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/info_icon4"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="16dp"
                        android:contentDescription="@string/settings_icon"
                        android:src="@drawable/settings"
                        card_view:tint="?attr/colorControlNormal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/info_icon4"
                        android:text="@string/notifications_settings"
                        android:textSize="16sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/info_icon5"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="16dp"
                        android:contentDescription="@string/time_icon"
                        android:src="@drawable/time"
                        card_view:tint="?attr/colorControlNormal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/timeSyncCheckBox"
                        android:layout_toEndOf="@+id/info_icon5"
                        android:text="@string/synchronize_time"
                        android:textSize="16sp" />

                    <CheckBox
                        android:id="@+id/timeSyncCheckBox"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="16dp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/info_icon6"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="16dp"
                        android:contentDescription="@string/notification_silent_icon"
                        android:src="@drawable/notifications_off"
                        card_view:tint="?attr/colorControlNormal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/SilentModeCheckBox"
                        android:layout_toEndOf="@+id/info_icon6"
                        android:text="@string/switch_phone_notifications"
                        android:textSize="16sp" />

                    <CheckBox
                        android:id="@+id/SilentModeCheckBox"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="16dp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/info_icon_callnotification"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="16dp"
                        android:contentDescription="@string/intro_phonestateslide_title"
                        android:src="@drawable/ic_ring_volume"
                        card_view:tint="?attr/colorControlNormal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/CallStateServiceCheckBox"
                        android:layout_toEndOf="@+id/info_icon_callnotification"
                        android:text="@string/show_calls_on_watch"
                        android:textSize="16sp" />

                    <CheckBox
                        android:id="@+id/CallStateServiceCheckBox"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="16dp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


    <TextView
        android:id="@+id/info_disconnected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/disconnected"
        android:textAlignment="center"
        android:textColor="#999999"
        android:textSize="17sp"
        app:drawableTopCompat="@drawable/cloud" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:src="@drawable/bluetooth_connect"
        app:elevation="8dp"
        app:fabSize="normal" />
</RelativeLayout>
